[package]
name = "giterator"
version = "0.2.0"
edition = "2021"
authors = ["JMARyA <jmarya@hydrar.de>"]
description = "A versatile command-line tool for iterating over Git commit histories."
license = "MIT"
repository = "https://git.hydrar.de/jmarya/giterator"
homepage = "https://git.hydrar.de/jmarya/giterator"
documentation = "https://git.hydrar.de/jmarya/giterator/blob/main/README.md"
keywords = ["git", "iteration", "command-line", "tool"]

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.2", features = ["cargo"] }
csv = "1.3.0"
serde_json = "1.0.114"
